[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/anchor.png" type="Texture" id=1]
[ext_resource path="res://script/anchor.gd" type="Script" id=2]
[ext_resource path="res://assets/anchor_selected.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.9426

[node name="Body" type="StaticBody2D"]
z_index = 1
input_pickable = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.0673072, 0.0673072 )
texture = ExtResource( 1 )

[node name="SelectedSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1.42109e-14, 1.42109e-14 )
scale = Vector2( 0.067134, 0.067134 )
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="." to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="on_mouse_exited"]
